teams/team-young/manifests/restrict-ingress-egress-young.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-ingress-egress-young
  namespace: team-young
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: team-andrew
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: team-andrew
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
